# mirra

./: .gitignore
docs/: mkdocs.yml  pyproject.toml
docs/assets/: logo.ai
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
firmware/: .clang-format  .clang-tidy  README.md  decode_uart.py  partitions.csv  platformio.ini
web/: .gitignore  .prettierrc  Caddyfile  Dockerfile  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
web/front/: layout.ts
web/mirra_backend/: __main__.py  app.py  config.py  exceptions.py  layout.py  log.py  mqtt_broker.py  mqtt_parser.py  vite_loader.py
web/mirra_backend/crud/: common.py  export.py  gateway.py  measurement.py  module.py  node.py  physical_module.py  sensor.py
web/mirra_backend/data/: __init__.py  database.py  gateway.py  location.py  measurement.py  modelbase.py  module.py  node.py  physical_module.py  prepopulation.py  sensor.py
web/mirra_backend/data/prepopulation/: sensor_classes.json  sensors.json
web/mirra_backend/data/prepopulation_test/: locations.json  measurements.json  modules.json  physical_modules.json  sensor_classes.json  sensors.json
web/mirra_backend/routes/: common.py  export.py  gateway.py  index.py
web/mirra_backend/templates/: add_gateway.html  add_gateway_page.html  export_page.html  index.html  layout.html
web/mirra_backend/types/: mac_address.py
web/mosquitto/: mosquitto.conf
web/tests/: conftest.py
web/tests/crud/: test_export.py  test_measurement.py  test_module.py  test_node.py  test_physical_module.py
(+75 files in other folders)
