[tool.poetry]
name = "mirra-docs"
version = "0.1.0"
description = ""
authors = ["Olocool17 <22843298+Olocool17@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
